[package]
name = "aprs_workout_stats"
version = "0.1.2"
edition = "2021"
homepage = "https://github.com/Frixxie/aprs_workout_stats"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "0.26.0"
mongodb = "2.7.1"
reqwest = { version = "0.11.23", features = ["json"] }
serde = "1.0.190"
serde_json = "1.0.108"
structopt = { version = "0.3.26", features = ["color"] }
tokio = { version = "1.33.0", features = ["full"] }
